--- a/package.json
+++ b/package.json
@@ -8,15 +8,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
+    "@reduxjs/toolkit": "^1.6.1",
+    "axios": "^0.21.4",
     "expo": "~42.0.1",
+    "expo-blur": "~9.0.3",
     "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
+    "mobx": "^6.3.3",
+    "mobx-react-lite": "^3.2.1",
+    "native-base": "3.2.0",
+    "react": "17.0.2",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
+    "react-native-web": "~0.13.12",
+    "react-navigation-stack": "^2.10.4",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "styled-components": "^5.3.1",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "~7.9.0"
   },
   "private": true
 }
