--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "native-base": "3.2.0",
+    "numbro": "^2.3.5",
     "react": "17.0.2",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -29,7 +30,8 @@
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
     "styled-components": "^5.3.1",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "underscore": "^1.13.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
