--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "format": "prettier --write . '**/*.{js,jsx}'"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.2",
@@ -33,7 +34,8 @@
     "underscore": "^1.13.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "~7.9.0",
+    "prettier": "^2.4.1"
   },
   "private": true
 }
